Update ant build

--- a/ant/build.properties
+++ b/ant/build.properties
@@ -8,6 +8,11 @@ sf.int.password = Its2smart4u
 sf.inf.username = lb@hps.ph.inf
 sf.inf.password = qazwsxedc1234
 
+#Informal partial:
+sf.inf.partial.username = mikhail.pochkin@highpointsolutions.com.rrprod.infpartial
+sf.inf.partial.password = poqw0912
+
+
 #Rollback Source Org:
 sf.rollback.username = lb@rh.hpsdevv3
 sf.rollback.password = Samokat26
