--- a/ant/build.xml
+++ b/ant/build.xml
@@ -66,6 +66,17 @@
         </sf:deploy>
     </target>
 
+    <target name="deploy-inf-partial" depends="prepare-metadata, skip-community">
+        <sf:deploy username="${sf.inf.username}"
+                   password="${sf.inf.password}"
+                   serverurl="${sf.serverurl}"
+                   maxPoll="${sf.maxPoll}"
+                   deployRoot="${source.dir}"
+                   pollwaitmillis="${sf.maxPollWaitTimeMs}"
+                   rollbackOnError="true">
+        </sf:deploy>
+    </target>
+
     <target name="create-rollback-source">
         <delete dir="${rollback.dir}"/>
         <mkdir dir="${rollback.source.dir}"/>
