--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -152,7 +152,7 @@ runTestINT:
   tags:
   - shell
   only:
-  - Sprint
+  - Sprint-RH3.2-PP3.2-Refactoring
   except:
   - merge_requests
 
@@ -166,7 +166,8 @@ runTestINF:
   tags:
   - shell
   only:
-  - Informal
+  - Release-RH3.1-PP1.1-Fixes
+  - Sprint-RH3.11-PP1.11
   except:
   - merge_requests
 
