--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -167,7 +167,7 @@ runTestINF:
   - shell
   only:
   - Release-RH3.1-PP1.1-Fixes
-  - Sprint-RH3.11-PP1.11
+#  - Sprint-RH3.11-PP1.11
   except:
   - merge_requests
 
