--- a/ant/build.properties
+++ b/ant/build.properties
@@ -4,6 +4,14 @@
 sf.int.username = lb@hps.ph.int
 sf.int.password = Its2smart4u
 
+#Integration instance:
+sf.int.username = lb.int3.1.1@hps.com
+sf.int.password = qazwsxedc123
+
+#INT 3.2 instance:
+sf.int.username = lb.int3.2@hps.com
+sf.int.password = qazwsxedc123
+
 #Informal instance:
 sf.inf.username = lb@hps.ph.inf
 sf.inf.password = qazwsxedc1234
