--- a/ant/build.properties
+++ b/ant/build.properties
@@ -1,10 +1,10 @@
 # build.properties
 
-#Integration instance:
+#INT instance:
 sf.int.username = lb@hps.ph.int
 sf.int.password = Its2smart4u
 
-#Integration instance:
+#INT 3.1.1 instance:
 sf.int.username = lb.int3.1.1@hps.com
 sf.int.password = qazwsxedc123
 
