--- a/ant/build.properties
+++ b/ant/build.properties
@@ -5,12 +5,12 @@ sf.int.username = lb@hps.ph.int
 sf.int.password = Its2smart4u
 
 #INT 3.1.1 instance:
-sf.int.username = lb.int3.1.1@hps.com
-sf.int.password = qazwsxedc123
+sf.int311.username = lb.int3.1.1@hps.com
+sf.int311.password = qazwsxedc123
 
 #INT 3.2 instance:
-sf.int.username = lb.int3.2@hps.com
-sf.int.password = qazwsxedc123
+sf.int32.username = lb.int3.2@hps.com
+sf.int32.password = qazwsxedc123
 
 #Informal instance:
 sf.inf.username = lb@hps.ph.inf
