--- a/ant/build.properties
+++ b/ant/build.properties
@@ -12,6 +12,10 @@ sf.int311.password = qazwsxedc456
 sf.int32.username = lb.int3.2@hps.com
 sf.int32.password = qazwsxedc234
 
+#INT 3.2 instance:
+sf.inf32.username = alina.32informal@hps.com
+sf.inf32.password = Its2smart4u
+
 #Informal instance:
 sf.inf.username = lb@hps.ph.inf
 sf.inf.password = qazwsxedc1234
