--- a/ant/build.properties
+++ b/ant/build.properties
@@ -8,11 +8,15 @@ sf.int.password = Its2smart4u
 sf.int311.username = lb.int3.1.1@hps.com
 sf.int311.password = qazwsxedc456
 
+#INF 3.1.1 instance:
+sf.inf311.username = andrey.salin@highpointsolutions.com.informa311
+sf.inf311.password = 321109qwe
+
 #INT 3.2 instance:
 sf.int32.username = lb.int3.2@hps.com
 sf.int32.password = qazwsxedc234
 
-#INT 3.2 instance:
+#INF 3.2 instance:
 sf.inf32.username = alina.32informal@hps.com
 sf.inf32.password = Its2smart4u
 
