--- a/ant/build.xml
+++ b/ant/build.xml
@@ -77,9 +77,20 @@
         </sf:deploy>
     </target>
 
-    <target name="deploy-inf32" depends="prepare-metadata, skip-community">
-        <sf:deploy username="${sf.inf32.username}"
-                   password="${sf.inf32.password}"
+    <target name="deploy-int311" depends="prepare-metadata, skip-community">
+        <sf:deploy username="${sf.int311.username}"
+                   password="${sf.int311.password}"
+                   serverurl="${sf.serverurl}"
+                   maxPoll="${sf.maxPoll}"
+                   deployRoot="${source.dir}"
+                   pollwaitmillis="${sf.maxPollWaitTimeMs}"
+                   rollbackOnError="true">
+        </sf:deploy>
+    </target>
+
+    <target name="deploy-inf311" depends="prepare-metadata, skip-community">
+        <sf:deploy username="${sf.inf311.username}"
+                   password="${sf.inf311.password}"
                    serverurl="${sf.serverurl}"
                    maxPoll="${sf.maxPoll}"
                    deployRoot="${source.dir}"
@@ -91,6 +102,17 @@
     <target name="deploy-int32" depends="prepare-metadata, skip-community">
         <sf:deploy username="${sf.int32.username}"
                    password="${sf.int32.password}"
+                   serverurl="${sf.serverurl}"
+                   maxPoll="${sf.maxPoll}"
+                   deployRoot="${source.dir}"
+                   pollwaitmillis="${sf.maxPollWaitTimeMs}"
+                   rollbackOnError="true">
+        </sf:deploy>
+    </target>
+
+    <target name="deploy-inf32" depends="prepare-metadata, skip-community">
+        <sf:deploy username="${sf.inf32.username}"
+                   password="${sf.inf32.password}"
                    serverurl="${sf.serverurl}"
                    maxPoll="${sf.maxPoll}"
                    deployRoot="${source.dir}"
