--- a/ant/build.properties
+++ b/ant/build.properties
@@ -1,4 +1,4 @@
-# build.properties
+# build.properties  
 
 #INT instance:
 sf.int.username = lb@hps.ph.int
@@ -8,9 +8,17 @@ sf.int.password = Its2smart4u
 sf.int311.username = lb.int3.1.1@hps.com
 sf.int311.password = qazwsxedc456
 
+#INF 3.1.1 instance:
+sf.inf311.username = andrey.salin@highpointsolutions.com.informa311
+sf.inf311.password = 321109qwe
+
 #INT 3.2 instance:
 sf.int32.username = lb.int3.2@hps.com
 sf.int32.password = qazwsxedc234
+
+#INF 3.2 instance:
+sf.inf32.username = alina.32informal@hps.com
+sf.inf32.password = Its2smart4u
 
 #Informal instance:
 sf.inf.username = lb@hps.ph.inf
@@ -41,6 +49,8 @@ dx.unpackaged.dir = ../unpackaged/main/default
 dist.dir = dist
 rollback.dir = rollback
 rollback.source.dir = rollback/source
+
+
 
 
 
