--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,33 @@
 stages:
-  - DeployINT3.2
-  - DeployINT3.1.1
-  - RunTestINT3.2
-  - RunTestINT3.1.1
-  - DeployINF3.2
-  - DeployINF3.1.1
-  - RunTestINF3.2
-  - RunTestINF3.1.1
+
+  #Validation:
   - VALIDATE
+  
+  # 3.2 INT:
+  - DeployINT3.2
+  - RunTestINT3.2
+  
+  # 3.2 INF:
+  - DeployINF3.2
+  - RunTestINF3.2
+  
+  # 3.1.1 INT:
+  - DeployINT3.1.1
+  - RunTestINT3.1.1
+  
+  # 3.1.1 INF:
+  - DeployINF3.1.1
+  - RunTestINF3.1.1
+  
 cache:
   paths:
     - node_modules
     - ~/.sfdx
     - .sfdx
-VALIDATE_INT-3.1.1:
+    
+    
+# Validation: ------------------------------------------------------------------   
+VALIDATE:
   tags:
     - shell
   only:
@@ -35,16 +49,17 @@ VALIDATE_INT-3.1.1:
     - sfdx force:mdapi:deploy -d output -u INT1.1 -c -w 60
     - echo "validate INT1.1 success"
 
-VALIDATE_INT-3.2:
+
+# 3.2 INT: ---------------------------------------------------------------------
+DeployINT3.2:
   tags:
   - shell
   only:
-    - merge_requests
+    - Sprint-RH3.2-PP1.2-Refactoring
   except:
-    - push
-    - commit
+    - merge_requests
 
-  stage: VALIDATE
+  stage: DeployINT3.2
   script:
     - echo "$INTTreeTwo" > sfdx-auth-url
     - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INT3.2 -d
@@ -54,9 +69,62 @@ VALIDATE_INT-3.2:
     - cd ..
     - rm -rf output
     - sfdx force:source:convert -d output
-    - sfdx force:mdapi:deploy -d output -u INT3.2 -c -w 60
-    - echo "validate Int3.2 success"
+    - sfdx force:mdapi:deploy -d output -u INT3.2  -w 60
+    - echo "deploy INT3.2 success"
 
+RunTestINT3.2:
+  tags:
+  - shell
+  only:
+    - Sprint-RH3.2-PP1.2-Refactoring
+  except:
+    - merge_requests
+
+  stage: RunTestINT3.2
+  script:
+    - echo "$INTTreeTwo" > sfdx-auth-url
+    - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INT3.2 -d
+    - sfdx force:apex:test:run -u INT3.2 --testlevel=RunLocalTests -w 60
+
+
+# 3.2 INF: ---------------------------------------------------------------------
+DeployINF3.2:
+  tags:
+  - shell
+  only:
+  - RH3.2-PP1.2-INF3.2
+  except:
+  - merge_requests
+
+  stage: DeployINF3.2
+  script:
+  - echo "$INFTreeTwo" > sfdx-auth-url
+  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF3.2 -d
+  - sfdx --version
+  - cd Nodejs
+  - node convert.js
+  - cd ..
+  - rm -rf output
+  - sfdx force:source:convert -d output
+  - sfdx force:mdapi:deploy -d output -u INF3.2  -w 60
+  - echo "deploy INF3.2 success"
+
+RunTestINF3.2:
+  tags:
+  - shell
+  only:
+  - RH3.2-PP1.2-INF3.2
+  except:
+  - merge_requests
+
+  stage: RunTestINF3.2
+  script:
+  - echo "$INFTreeTwo" > sfdx-auth-url
+  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF3.2 -d
+  - sfdx force:apex:test:run -u INF3.2 --testlevel=RunLocalTests -w 60
+
+
+# 3.1.1 INT: -------------------------------------------------------------------
 DeployINT3.1.1:
   tags:
   - shell
@@ -79,27 +147,22 @@ DeployINT3.1.1:
     - sfdx force:mdapi:deploy -d output -u INT1.1  -w 60
     - echo "deploy Int1.1 success"
 
-DeployINT3.2:
+RunTestINT3.1.1:
   tags:
   - shell
   only:
-    - Sprint-RH3.2-PP1.2-Refactoring
+    - Sprint-RH3.1.1-PP1.1.1
   except:
     - merge_requests
 
-  stage: DeployINT3.2
+  stage: RunTestINT3.1.1
   script:
-    - echo "$INTTreeTwo" > sfdx-auth-url
-    - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INT3.2 -d
-    - sfdx --version
-    - cd Nodejs
-    - node convert.js
-    - cd ..
-    - rm -rf output
-    - sfdx force:source:convert -d output
-    - sfdx force:mdapi:deploy -d output -u INT3.2  -w 60
-    - echo "deploy INT3.2 success"
+    - echo "$INTOneOne" > sfdx-auth-url
+    - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INT1.1 -d
+    - sfdx force:apex:test:run -u INT1.1 --testlevel=RunLocalTests -w 60
 
+
+# 3.1.1 INF: -------------------------------------------------------------------
 DeployINF3.1.1:
   tags:
   - shell
@@ -122,55 +185,6 @@ DeployINF3.1.1:
   - sfdx force:mdapi:deploy -d output -u INF1.1  -w 60
   - echo "deploy InF1.1 success"
 
-DeployINF3.2:
-  tags:
-  - shell_2
-  only:
-  - RH3.2-PP1.2-INF3.2
-  except:
-  - merge_requests
-
-  stage: DeployINF3.2
-  script:
-  - echo "$INFTreeTwo" > sfdx-auth-url
-  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF3.2 -d
-  - sfdx --version
-  - cd Nodejs
-  - node convert.js
-  - cd ..
-  - rm -rf output
-  - sfdx force:source:convert -d output
-  - sfdx force:mdapi:deploy -d output -u INF3.2  -w 60
-  - echo "deploy INF3.2 success"
-
-RunTestINT3.1.1:
-  tags:
-  - shell
-  only:
-    - Sprint-RH3.1.1-PP1.1.1
-  except:
-    - merge_requests
-
-  stage: RunTestINT3.1.1
-  script:
-    - echo "$INTOneOne" > sfdx-auth-url
-    - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INT1.1 -d
-    - sfdx force:apex:test:run -u INT1.1 --testlevel=RunLocalTests -w 60
-
-RunTestINT3.2:
-  tags:
-  - shell_2
-  only:
-    - Sprint-RH3.2-PP1.2-Refactoring
-  except:
-    - merge_requests
-
-  stage: RunTestINT3.2
-  script:
-    - echo "$INTTreeTwo" > sfdx-auth-url
-    - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INT3.2 -d
-    - sfdx force:apex:test:run -u INT3.2 --testlevel=RunLocalTests -w 60
-
 RunTestINF3.1.1:
   tags:
   - shell
@@ -184,18 +198,4 @@ RunTestINF3.1.1:
   - echo "$INFOneOne" > sfdx-auth-url
   - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF1.1 -d
   - sfdx force:apex:test:run -u INF1.1 --testlevel=RunLocalTests -w 60
-
-RunTestINF3.2:
-  tags:
-  - shell
-  only:
-  - RH3.2-PP1.2-INF3.2
-  except:
-  - merge_requests
-
-  stage: RunTestINF3.2
-  script:
-  - echo "$INFTreeTwo" > sfdx-auth-url
-  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF3.2 -d
-  - sfdx force:apex:test:run -u INF3.2 --testlevel=RunLocalTests -w 60
 
