--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,31 +2,31 @@ stages:
 
   #Validation:
   - VALIDATE
-  
+
   # 3.2 INT:
   - DeployINT3.2
   - RunTestINT3.2
-  
+
   # 3.2 INF:
   - DeployINF3.2
   - RunTestINF3.2
-  
+
   # 3.1.1 INT:
   - DeployINT3.1.1
   - RunTestINT3.1.1
-  
+
   # 3.1.1 INF:
   - DeployINF3.1.1
   - RunTestINF3.1.1
-  
+
 cache:
   paths:
     - node_modules
     - ~/.sfdx
     - .sfdx
-    
-    
-# Validation: ------------------------------------------------------------------   
+
+
+# Validation: ------------------------------------------------------------------
 VALIDATE:
   tags:
     - shell
@@ -53,7 +53,7 @@ VALIDATE:
 # 3.2 INT: ---------------------------------------------------------------------
 DeployINT3.2:
   tags:
-  - shell
+    - shell
   only:
     - Sprint-RH3.2-PP1.2-Refactoring
   except:
@@ -74,7 +74,7 @@ DeployINT3.2:
 
 RunTestINT3.2:
   tags:
-  - shell
+    - shell
   only:
     - Sprint-RH3.2-PP1.2-Refactoring
   except:
@@ -90,44 +90,44 @@ RunTestINT3.2:
 # 3.2 INF: ---------------------------------------------------------------------
 DeployINF3.2:
   tags:
-  - shell
+    - shell
   only:
-  - RH3.2-PP1.2-INF3.2
+    - RH3.2-PP1.2-INF3.2
   except:
-  - merge_requests
+    - merge_requests
 
   stage: DeployINF3.2
   script:
-  - echo "$INFTreeTwo" > sfdx-auth-url
-  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF3.2 -d
-  - sfdx --version
-  - cd Nodejs
-  - node convert.js
-  - cd ..
-  - rm -rf output
-  - sfdx force:source:convert -d output
-  - sfdx force:mdapi:deploy -d output -u INF3.2  -w 60
-  - echo "deploy INF3.2 success"
+    - echo "$INFTreeTwo" > sfdx-auth-url
+    - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF3.2 -d
+    - sfdx --version
+    - cd Nodejs
+    - node convert.js
+    - cd ..
+    - rm -rf output
+    - sfdx force:source:convert -d output
+    - sfdx force:mdapi:deploy -d output -u INF3.2  -w 60
+    - echo "deploy INF3.2 success"
 
 RunTestINF3.2:
   tags:
-  - shell
+    - shell
   only:
-  - RH3.2-PP1.2-INF3.2
+    - RH3.2-PP1.2-INF3.2
   except:
-  - merge_requests
+    - merge_requests
 
   stage: RunTestINF3.2
   script:
-  - echo "$INFTreeTwo" > sfdx-auth-url
-  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF3.2 -d
-  - sfdx force:apex:test:run -u INF3.2 --testlevel=RunLocalTests -w 60
+    - echo "$INFTreeTwo" > sfdx-auth-url
+    - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF3.2 -d
+    - sfdx force:apex:test:run -u INF3.2 --testlevel=RunLocalTests -w 60
 
 
 # 3.1.1 INT: -------------------------------------------------------------------
 DeployINT3.1.1:
   tags:
-  - shell
+    - shell
   only:
     - Sprint-RH3.1.1-PP1.1.1
   except:
@@ -149,7 +149,7 @@ DeployINT3.1.1:
 
 RunTestINT3.1.1:
   tags:
-  - shell
+    - shell
   only:
     - Sprint-RH3.1.1-PP1.1.1
   except:
@@ -165,37 +165,37 @@ RunTestINT3.1.1:
 # 3.1.1 INF: -------------------------------------------------------------------
 DeployINF3.1.1:
   tags:
-  - shell
+    - shell
   only:
-  - RH3.1.1-PP1.1.1INF3.1.1
+    - RH3.1.1-PP1.1.1INF3.1.1
   except:
-  - merge_requests
+    - merge_requests
 
   stage: DeployINF3.1.1
   script:
-  - echo "$INFOneOne" > sfdx-auth-url
-  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF1.1 -d
-  - echo "test1"
-  - sfdx --version
-  - cd Nodejs
-  - node convert.js
-  - cd ..
-  - rm -rf output
-  - sfdx force:source:convert -d output
-  - sfdx force:mdapi:deploy -d output -u INF1.1  -w 60
-  - echo "deploy InF1.1 success"
+    - echo "$INFOneOne" > sfdx-auth-url
+    - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF1.1 -d
+    - echo "test1"
+    - sfdx --version
+    - cd Nodejs
+    - node convert.js
+    - cd ..
+    - rm -rf output
+    - sfdx force:source:convert -d output
+    - sfdx force:mdapi:deploy -d output -u INF1.1  -w 60
+    - echo "deploy InF1.1 success"
 
 RunTestINF3.1.1:
   tags:
-  - shell
+    - shell
   only:
-  - RH3.1.1-PP1.1.1INF3.1.1
+    - RH3.1.1-PP1.1.1INF3.1.1
   except:
-  - merge_requests
+    - merge_requests
 
-  stage: RunTestINT3.1.1
+  stage: RunTestINF3.1.1
   script:
-  - echo "$INFOneOne" > sfdx-auth-url
-  - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF1.1 -d
-  - sfdx force:apex:test:run -u INF1.1 --testlevel=RunLocalTests -w 60
+    - echo "$INFOneOne" > sfdx-auth-url
+    - sfdx force:auth:sfdxurl:store -f sfdx-auth-url -a INF1.1 -d
+    - sfdx force:apex:test:run -u INF1.1 --testlevel=RunLocalTests -w 60
 
